[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Gamer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bgmenu.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.270588, 0.270588, 0.270588, 1 )
position = Vector2( 128, 288 )
scale = Vector2( 0.770423, 0.892496 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0.270588, 0.270588, 0.270588, 1 )
position = Vector2( 896, 288 )
scale = Vector2( 0.770423, 0.892496 )
texture = ExtResource( 3 )
flip_h = true

[node name="Menu1" type="Node2D" parent="CanvasLayer"]
position = Vector2( 224, 64 )

[node name="MenuSelector1" type="RichTextLabel" parent="CanvasLayer/Menu1"]
margin_left = 128.0
margin_top = 96.0
margin_right = 480.0
margin_bottom = 160.0
custom_fonts/normal_font = SubResource( 1 )
text = "PLAY GAME"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector1Active" type="RichTextLabel" parent="CanvasLayer/Menu1/MenuSelector1"]
visible = false
modulate = Color( 0.878431, 0.509804, 0.509804, 1 )
margin_right = 336.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "PLAY GAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelector2" type="RichTextLabel" parent="CanvasLayer/Menu1"]
margin_left = 128.0
margin_top = 176.0
margin_right = 448.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 1 )
text = "MULTIPLAYER"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector2Active" type="RichTextLabel" parent="CanvasLayer/Menu1/MenuSelector2"]
visible = false
modulate = Color( 0.878431, 0.509804, 0.509804, 1 )
margin_right = 320.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "MULTIPLAYER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelector3" type="RichTextLabel" parent="CanvasLayer/Menu1"]
margin_left = 128.0
margin_top = 256.0
margin_right = 384.0
margin_bottom = 320.0
custom_fonts/normal_font = SubResource( 1 )
text = "OPTIONS"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector3Active" type="RichTextLabel" parent="CanvasLayer/Menu1/MenuSelector3"]
visible = false
modulate = Color( 0.878431, 0.509804, 0.509804, 1 )
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "OPTIONS"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelector4" type="RichTextLabel" parent="CanvasLayer/Menu1"]
margin_left = 128.0
margin_top = 336.0
margin_right = 384.0
margin_bottom = 400.0
custom_fonts/normal_font = SubResource( 1 )
text = "EXIT GAME"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector4Active" type="RichTextLabel" parent="CanvasLayer/Menu1/MenuSelector4"]
visible = false
modulate = Color( 0.878431, 0.509804, 0.509804, 1 )
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "EXIT GAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Menu1"]
modulate = Color( 0.0941176, 0.227451, 0.541176, 1 )
margin_left = 48.0
margin_top = -48.0
margin_right = 304.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 1 )
text = "ARACHNIA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="MultiplayerLabel" type="RichTextLabel" parent="CanvasLayer/Multiplayer"]
margin_left = 336.0
margin_right = 704.0
margin_bottom = 80.0
custom_fonts/normal_font = SubResource( 1 )
text = "MULTIPLAYER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="RichTextLabel" parent="CanvasLayer/Multiplayer"]
margin_left = 256.0
margin_top = 96.0
margin_right = 560.0
margin_bottom = 160.0
custom_fonts/normal_font = SubResource( 1 )
text = "HOST SERVER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Active" type="RichTextLabel" parent="CanvasLayer/Multiplayer/Host"]
visible = false
modulate = Color( 1, 0.992157, 0.470588, 1 )
margin_right = 304.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "HOST SERVER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostServerBox" type="TextEdit" parent="CanvasLayer/Multiplayer"]
margin_left = 256.0
margin_top = 160.0
margin_right = 512.0
margin_bottom = 192.0
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="RichTextLabel" parent="CanvasLayer/Multiplayer"]
margin_left = 256.0
margin_top = 256.0
margin_right = 560.0
margin_bottom = 320.0
custom_fonts/normal_font = SubResource( 1 )
text = "JOIN SERVER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Active" type="RichTextLabel" parent="CanvasLayer/Multiplayer/Join"]
visible = false
modulate = Color( 1, 0.992157, 0.470588, 1 )
margin_right = 304.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "JOIN SERVER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServerBox" type="TextEdit" parent="CanvasLayer/Multiplayer"]
margin_left = 256.0
margin_top = 320.0
margin_right = 512.0
margin_bottom = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="RichTextLabel" parent="CanvasLayer/Multiplayer"]
margin_left = 256.0
margin_top = 416.0
margin_right = 512.0
margin_bottom = 480.0
custom_fonts/normal_font = SubResource( 1 )
text = "RETURN"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Active" type="RichTextLabel" parent="CanvasLayer/Multiplayer/Return"]
visible = false
modulate = Color( 1, 0.992157, 0.470588, 1 )
margin_right = 304.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 1 )
text = "RETURN"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu2" type="Node2D" parent="CanvasLayer"]
visible = false

[node name="Options" type="RichTextLabel" parent="CanvasLayer/Menu2"]
margin_left = 400.0
margin_top = 96.0
margin_right = 624.0
margin_bottom = 160.0
custom_fonts/normal_font = SubResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelector1" type="RichTextLabel" parent="CanvasLayer/Menu2"]
margin_left = 256.0
margin_top = 144.0
margin_right = 464.0
margin_bottom = 208.0
custom_fonts/normal_font = SubResource( 2 )
text = "MUSIC"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector1Active" type="RichTextLabel" parent="CanvasLayer/Menu2/MenuSelector1"]
visible = false
modulate = Color( 0.878431, 0.517647, 0.517647, 1 )
margin_right = 208.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 2 )
text = "MUSIC"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelector2" type="RichTextLabel" parent="CanvasLayer/Menu2"]
margin_left = 256.0
margin_top = 256.0
margin_right = 544.0
margin_bottom = 304.0
custom_fonts/normal_font = SubResource( 2 )
text = "SOUNDS"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector2Active" type="RichTextLabel" parent="CanvasLayer/Menu2/MenuSelector2"]
visible = false
modulate = Color( 1, 0.560784, 0.560784, 1 )
margin_right = 288.0
margin_bottom = 48.0
custom_fonts/normal_font = SubResource( 2 )
text = "SOUNDS"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuSelector3" type="RichTextLabel" parent="CanvasLayer/Menu2"]
margin_left = 256.0
margin_top = 368.0
margin_right = 528.0
margin_bottom = 432.0
custom_fonts/normal_font = SubResource( 2 )
text = "RETURN"
scroll_active = false
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MenuSelector3Active" type="RichTextLabel" parent="CanvasLayer/Menu2/MenuSelector3"]
visible = false
modulate = Color( 0.968627, 0.560784, 0.560784, 1 )
margin_right = 272.0
margin_bottom = 64.0
custom_fonts/normal_font = SubResource( 2 )
text = "RETURN"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Node2D" parent="CanvasLayer/Menu2"]
position = Vector2( 464, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="Bar1" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 16.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar1"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar2" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 48.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar2"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar3" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 80.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar3"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar4" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 112.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar4"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar5" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 144.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar5"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar6" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 176.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar6"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar7" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 208.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar7"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar8" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 240.0
margin_top = 32.0
margin_right = 256.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar8"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar9" type="ColorRect" parent="CanvasLayer/Menu2/Volume"]
margin_left = 272.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume/Bar9"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume2" type="Node2D" parent="CanvasLayer/Menu2"]
position = Vector2( 464, 272 )
__meta__ = {
"_edit_group_": true
}

[node name="Bar1" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 16.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar1"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar2" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 48.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar2"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar3" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 80.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar3"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar4" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 112.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar4"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar5" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 144.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar5"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar6" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 176.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar6"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar7" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 208.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar7"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar8" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 240.0
margin_top = 32.0
margin_right = 256.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar8"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar9" type="ColorRect" parent="CanvasLayer/Menu2/Volume2"]
margin_left = 272.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 48.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BarActive" type="ColorRect" parent="CanvasLayer/Menu2/Volume2/Bar9"]
margin_top = -32.0
margin_right = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SRText" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 128.0
margin_top = 528.0
margin_right = 736.0
margin_bottom = 576.0
custom_fonts/normal_font = SubResource( 3 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
